@@ -4,11 +4,12 @@ import com.ironhack.convert.util.validator.anotations.ValidIndustry;
 
 import javax.validation.ConstraintValidator;
 import javax.validation.ConstraintValidatorContext;
+import java.util.Arrays;
 import java.util.List;
 
 public class IndustryValidator implements ConstraintValidator<ValidIndustry, String> {
 
-  private final List<String> validIndustry = List.of("PRODUCE", "ECOMMERCE", "MEDICAL", "OTHER", "MANUFACTURING");
+  private final List<String> validIndustry = Arrays.asList("PRODUCE", "ECOMMERCE", "MEDICAL", "OTHER", "MANUFACTURING");
 
   @Override
   public void initialize(ValidIndustry industry) {
@@ -17,7 +18,7 @@ public class IndustryValidator implements ConstraintValidator<ValidIndustry, Str
   @Override
   public boolean isValid(String industry, ConstraintValidatorContext constraintValidatorContext) {
     if (industry == null) return true;
-    if (industry.isBlank()) return true; // It just checks if it exists.
+    if (industry.trim().equals("")) return true; // It just checks if it exists.
     return validIndustry.contains(industry.trim().toUpperCase());
   }
 
