@@ -4,11 +4,12 @@ import com.ironhack.convert.util.validator.anotations.ValidProduct;
 
 import javax.validation.ConstraintValidator;
 import javax.validation.ConstraintValidatorContext;
+import java.util.Arrays;
 import java.util.List;
 
 public class ProductValidator implements ConstraintValidator<ValidProduct, String> {
 
-  private final List<String> validProduct = List.of("HYBRID", "FLATBED", "BOX");
+  private final List<String> validProduct = Arrays.asList("HYBRID", "FLATBED", "BOX");
 
   @Override
   public void initialize(ValidProduct product) {
@@ -17,7 +18,7 @@ public class ProductValidator implements ConstraintValidator<ValidProduct, Strin
   @Override
   public boolean isValid(String product, ConstraintValidatorContext constraintValidatorContext) {
     if (product == null) return true;
-    if (product.isBlank()) return true; // It just checks if it exists.
+    if (product.trim().equals("")) return true; // It just checks if it exists.
     return validProduct.contains(product.trim().toUpperCase());
   }
 
